Add Leclerc to the remaining ironman 5x HoF slots.
Adding Leclerc's claim to Regular Ironmen 5x in skills: Construction, Agility and Hunter

--- a/site/community/hall_of_fame_x5.html
+++ b/site/community/hall_of_fame_x5.html
@@ -102,7 +102,7 @@ layout: guide
 <tr class="trForFame">
 <td class="tdForFame">Construction</td>
 <td class="tdForFame"></td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Leclerc</td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
 </tr>
@@ -116,7 +116,7 @@ layout: guide
 <tr class="trForFame">
 <td class="tdForFame">Agility</td>
 <td class="tdForFame">Meep</td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Leclerc</td>
 <td class="tdForFame"></td>
 <td class="tdForFame">Spirit</td>
 </tr>
@@ -137,7 +137,7 @@ layout: guide
 <tr class="trForFame">
 <td class="tdForFame">Hunter</td>
 <td class="tdForFame">Meep</td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Leclerc</td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
 </tr>
