--- a/site/community/hall_of_fame_x10.html
+++ b/site/community/hall_of_fame_x10.html
@@ -80,7 +80,7 @@ layout: guide
 </tr>
 <tr class="trForFame">
 <td class="tdForFame">Runecrafting</td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Mute</td>
 
 </tr>
 <tr class="trForFame">
