--- a/site/community/hall_of_fame_x1.html
+++ b/site/community/hall_of_fame_x1.html
@@ -52,7 +52,7 @@ layout: guide
 </tr>
 <tr class="trForFame">
 <td class="tdForFame">Strength</td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Szumaster3</td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
