--- a/site/community/hall_of_fame_x2.5.html
+++ b/site/community/hall_of_fame_x2.5.html
@@ -192,7 +192,7 @@ layout: guide
 </tr>
 <tr class="trForFame">
 <td class="tdForFame">Firemaking</td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Valpuri</td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
