--- a/site/community/hall_of_fame_x1.html
+++ b/site/community/hall_of_fame_x1.html
@@ -46,14 +46,14 @@ layout: guide
 <tr class="trForFame">
 <td class="tdForFame">Attack</td>
 <td class="tdForFame"></td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Hagane</td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
 </tr>
 <tr class="trForFame">
 <td class="tdForFame">Strength</td>
 <td class="tdForFame">Szumaster3</td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Hagane</td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
 </tr>
