--- a/site/community/hall_of_fame_x1.html
+++ b/site/community/hall_of_fame_x1.html
@@ -60,14 +60,14 @@ layout: guide
 <tr class="trForFame">
 <td class="tdForFame">Defence</td>
 <td class="tdForFame"></td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Hagane</td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
 </tr>
 <tr class="trForFame">
 <td class="tdForFame">HP</td>
 <td class="tdForFame"></td>
-<td class="tdForFame"></td>
+<td class="tdForFame">Hagane</td>
 <td class="tdForFame"></td>
 <td class="tdForFame"></td>
 </tr>
